--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,20 @@ jobs:
           restore-keys: |
             Library-${{ runner.os }}
       - name: Run tests
+        id: testStep
         uses: game-ci/unity-test-runner@v4
         env:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          path: ${{ steps.testStep.outputs.artifactPath }}
+          name: Test results
+      - name: Upload coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          path: ${{ steps.testStep.outputs.coveragePath }}
+          name: Coverage results
 
